--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,13 @@ readme = "README.md"
 python = "^3.12"
 django = "^5.0.6"
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.7.1"
+black = "^24.4.2"
+isort = "^5.13.2"
+flake8 = "^7.1.0"
+mypy = "^1.10.1"
+pylint = "^3.2.4"
 
 [build-system]
 requires = ["poetry-core"]
