--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -15,7 +15,8 @@ jobs:
       uses: actions/checkout@v4
     - name: Set up Python
       uses: actions/setup-python@v3
-      python-version: 3.12
+      with:
+        python-version: 3.12
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
