--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -16,8 +16,16 @@ jobs:
         with:
           python-version: 3.12
 
-      - name: Install Python dependencies
-        run: pip install black flake8 mypy
+      - name: Create virtual environment
+        run: python -m venv venv
+        working-directory: ${{ github.workspace }}
+
+      - name: Activate virtual environment and install dependencies
+        run: |
+          source venv/bin/activate
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install black flake8 mypy
 
       - name: Run black flake8 mypy
         uses: wearerequired/lint-action@v1
@@ -31,3 +39,10 @@ jobs:
         uses: isort/isort-action@master
         with:
           requirementsFiles: "requirements.txt"
+
+      - name: Run pylint
+        run: |
+          source venv/bin/activate
+          pylint $(git ls-files '*.py')
+          deactivate
+        working-directory: ${{ github.workspace }}
