--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -23,4 +23,5 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        python3 manage.py test
+        cd core
+        python manage.py test
