--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -2,7 +2,7 @@ name: Run tests
 
 on:
   push:
-    branches: [ "develop", "github-actions" ]
+    branches: [ "develop", "fix-github-actions" ]
   pull_request:
     branches: [ "develop" ]
 
@@ -17,10 +17,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: 3.12
+    - name: Install poetry
+      uses: abatilo/actions-poetry@v2
     - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      run: poetry install
     - name: Run Tests
       run: |
         cd core
