made github actions without requirements.txt

--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -23,4 +23,4 @@ jobs:
       run: poetry install
     - name: Run Tests
       run: |
-        poetry run python core/manage.py test
+        poetry run python manage.py test
