--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         python-version: 3.12
     - name: Install poetry
-      uses: abatilo/actions-poetry@v2
+      uses: snok/install-poetry@v1
     - name: Install Dependencies
       run: poetry install
     - name: Run Tests
