test github actions with db try1

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-SECRET_KEY="your_secret_key"
-DEBUG=True/False
-DB_NAME=<your-db-name>
-DB_USER=<your-db-user>
-DB_PASSWORD=<your-db-password>
-DB_HOST=<your-db-host>
-DB_PORT=<your-db-port>
+SECRET_KEY='django-insecure-@h-x!(lzw#&#ta+$@=36w*fm8rxn7*f_c!mld35%sy33x_7-07'
+DEBUG=True
+DB_NAME=TODO_core
+DB_USER=postgres
+DB_PASSWORD=coretodopg
+DB_HOST=localhost
+DB_PORT=5432
