--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -37,7 +37,9 @@ jobs:
     - name: Install Dependencies
       run: poetry install
     - name: Run migrations
-      run: poetry run python manage.py migrate
+      run: |
+        cd core
+        poetry run python manage.py migrate
     - name: Run Tests
       env:
         DATABASE_URL: 'postgres://postgres:postgres@localhost:${{ job.services.postgres.ports[5432] }}/postgres'
