--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -16,9 +16,9 @@ jobs:
         image: postgres:latest
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
-        ports: [ '5435:5432' ]
+          POSTGRES_PASSWORD: coretodopg
+          POSTGRES_DB: TODO_core
+        ports: [ '5432:5432' ]
         options: >-
           --health-cmd pg_isready
           --health-interval 10s 
