test github actions with db try7

--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -38,7 +38,8 @@ jobs:
       run: poetry install
     - name: Run Tests
       env:
-        DATABASE_URL: 'postgres://postgres:postgres@localhost:${{ job.services.postgres.ports[5432] }}/TODO_core'
+        POSTGRES_HOST: postgres
+        POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
       run: |
         cd core
         poetry run python manage.py test
