--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -19,6 +19,7 @@ jobs:
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: postgres
           POSTGRES_PORT: 5432
+          POSTGRES_HOST: postgres
         ports:
         -  5432:5432
         options: >-
