--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -11,6 +11,8 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    container: django:latest
+
     services:
       postgres:
         image: postgres:latest
