made github actions without requirements.txt

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 SECRET_KEY='django-insecure-@h-x!(lzw#&#ta+$@=36w*fm8rxn7*f_c!mld35%sy33x_7-07'
 DEBUG=True
-DB_NAME=TODO_core
-DB_USER=postgres
-DB_PASSWORD=coretodopg
-DB_HOST=localhost
-DB_PORT=5432
+POSTGRES_DB=TODO_core
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=coretodopg
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
