--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -2,7 +2,7 @@ name: Run tests
 
 on:
   push:
-    branches: [ "develop", "fix-github-actions" ]
+    branches: [ "develop", "crud-projects" ]
   pull_request:
     branches: [ "develop" ]
 
@@ -40,6 +40,9 @@ jobs:
 
     - name: Install Dependencies
       run: poetry install
+
+    - name: Connect to PostgreSQL
+      run: poetry run python create_test_db.py
 
     - name: Run Tests
       env:
