--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 django = "^5.0.6"
 psycopg2-binary = "^2.9.9"
 djangorestframework = "^3.15.2"
+config = "^0.5.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.1"
