--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -41,7 +41,12 @@ jobs:
     - name: Install Dependencies
       run: poetry install
 
-    - name: Connect to PostgreSQL
+    - name: Migrate database
+      run: |
+        cd core
+        poetry run python manage.py migrate
+
+    - name: Create db tables
       run: poetry run python create_test_db.py
 
     - name: Run Tests
