--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -2,7 +2,7 @@ name: Run tests
 
 on:
   push:
-    branches: [ "develop", "crud-projects" ]
+    branches: [ "develop" ]
   pull_request:
     branches: [ "develop" ]
 
@@ -41,8 +41,10 @@ jobs:
     - name: Install Dependencies
       run: poetry install
 
-    - name: Create db tables
-      run: poetry run python create_test_db.py
+    - name: Migrate database
+      run: |
+        cd core
+        poetry run python manage.py migrate
 
     - name: Run Tests
       env:
