--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -17,9 +17,9 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
+          POSTGRES_DB: test_db
         ports:
-        -  5432:5432
+        -  5433:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s 
@@ -41,14 +41,12 @@ jobs:
     - name: Install Dependencies
       run: poetry install
 
+    - name: Run migrations
+      run: |
+        cd core
+        poetry run python manage.py migrate
+
     - name: Run Tests
-      env:
-        DEBUG: ${{ secrets.DEBUG }}
-        SECRET_KEY: ${{ secrets.SECRET_KEY }}
-        DB_HOST: ${{ secrets.POSTGRES_HOST }}
-        DB_NAME: ${{ secrets.POSTGRES_DB }}
-        DB_USER: ${{ secrets.POSTGRES_USER }}
-        DB_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
       run: |
         cd core
         poetry run python manage.py test
