added dev and prod settings

--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -56,4 +56,4 @@ jobs:
         DB_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
       run: |
         cd core
-        poetry run python manage.py test
+        poetry run python manage.py test --settings=core.settings.dev
