--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.12"
 django = "^5.0.6"
 psycopg2-binary = "^2.9.9"
+djangorestframework = "^3.15.2"
+config = "^0.5.1"
+django-filter = "^24.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.1"
@@ -17,6 +20,9 @@ isort = "^5.13.2"
 flake8 = "^7.1.0"
 mypy = "^1.10.1"
 pylint = "^3.2.4"
+
+[tool.isort]
+profile = "black"
 
 [build-system]
 requires = ["poetry-core"]
