--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ psycopg2-binary = "^2.9.9"
 djangorestframework = "^3.15.2"
 config = "^0.5.1"
 django-filter = "^24.2"
+celery = "^5.4.0"
+django-celery-beat = "^2.6.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.1"
