--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=coretodopg
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
+EMAIL_HOST = 'smtp.example.com'
+EMAIL_HOST_USER = 'your_email@example.com'
+EMAIL_HOST_PASSWORD = 'your_password'
+CELERY_BROKER_URL = 'redis://redis:6379/0'
+CELERY_RESULT_BACKEND = 'redis://redis:6379/0'
