--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,52 @@
 version: '3.12'
+x-environment-defaults: &environment-defaults
+  DEBUG: ${DEBUG}
+  DB_NAME: ${DB_NAME}
+  DB_USER: ${DB_USER}
+  DB_PASSWORD: ${DB_PASSWORD}
+  DB_HOST: "postgres-db"
+  DB_PORT: ${DB_PORT}
+  CELERY_BROKER_URL: "redis://redis:6379/0"
+  CELERY_RESULT_BACKEND: "redis://redis:6379/0"
+  SECRET_KEY: ${SECRET_KEY}
+
 
 services:
   postgres-db:
     image: postgres:latest
     container_name: db_for_core
     environment:
-      POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      <<: *environment-defaults
     ports:
       - "5432:5432"
     volumes:
       - pg_data:/var/lib/postgresql/data
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+
+  celery:
+    build:
+      context: .
+    command: poetry run celery -A core worker --loglevel=info
+    depends_on:
+      - redis
+      - postgres-db
+    environment:
+      <<: *environment-defaults
+
+  celery-beat:
+    build:
+      context: .
+    command: poetry run celery -A core beat --loglevel=info
+    depends_on:
+      - celery
+      - redis
+      - postgres-db
+    environment:
+      <<: *environment-defaults
 
   todo_core:
     build:
@@ -21,17 +56,11 @@ services:
     depends_on:
       - postgres-db
     environment:
-      SECRET_KEY: ${SECRET_KEY}
-      DEBUG: ${DEBUG}
-      DB_NAME: ${DB_NAME}
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
-      DB_HOST: db_for_core
-      DB_PORT: ${DB_PORT}
+      <<: *environment-defaults
       PYTHONUNBUFFERED: 1
     entrypoint:
       - ./entrypoint.sh
 
-
 volumes:
   pg_data:
+
