--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ config = "^0.5.1"
 django-filter = "^24.2"
 celery = "^5.4.0"
 django-celery-beat = "^2.6.0"
+redis = "^5.0.7"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.1"
