--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ config = "^0.5.1"
 django-filter = "^24.2"
 celery = "^5.4.0"
 django-celery-beat = "^2.6.0"
+redis = "^5.0.7"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.1"
@@ -22,6 +23,7 @@ isort = "^5.13.2"
 flake8 = "^7.1.0"
 mypy = "^1.10.1"
 pylint = "^3.2.4"
+flower = "^2.0.1"
 
 [tool.isort]
 profile = "black"
