--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ EMAIL_HOST_USER = 'your_email@example.com'
 EMAIL_HOST_PASSWORD = 'your_password'
 CELERY_BROKER_URL = 'redis://redis:6379/0'
 CELERY_RESULT_BACKEND = 'redis://redis:6379/0'
+JWT_SECRET_KEY='R7Xv6YgKVornZdfhgfhghFVaPXaiXoBVifd8TmLT'
+JWT_ALGORITHM=HS256
+AUTH_URL_FOR_GETTING_NOTIFICATION_EMAILS=http://127.0.0.1:8000/users/notification_emails
