--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pyjwt = "^2.9.0"
 requests = "^2.32.3"
 httpx = "^0.27.0"
 confluent-kafka = "^2.5.3"
+django-redis = "^5.4.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.1"
