--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,11 @@ django-filter = "^24.2"
 celery = "^5.4.0"
 django-celery-beat = "^2.6.0"
 redis = "^5.0.7"
+pyjwt = "^2.9.0"
+requests = "^2.32.3"
+httpx = "^0.27.0"
 confluent-kafka = "^2.5.3"
+django-redis = "^5.4.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.1"
